[package]
name = "korvex-video-engine"
version = "1.1.0"
edition = "2021"

[features]
# Versiunea de bază (limitată)
community = []
# Versiunea completă (fără limite)
commercial = []

# Setăm Community ca versiune implicită la compilare
default = ["community"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
which = "4.4"